[build-system]
requires = [
    "setuptools >= 40.8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.towncrier]
package = "pulp_rpm"
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date}) {{: #{version} }}"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp_rpm/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[tool.check-manifest]
ignore = [
    ".bumpversion.cfg",
    "CHANGES/**",
    "CONTRIBUTING.rst",
    "dev_requirements.txt",
    "doc_requirements.txt",
    "docs/**",
    "staging_docs/**",
    "template_config.yml",
    ".pep8speaks.yml",
    ".ci/**",
    ".github/**",
    "lint_requirements.txt",
    ".flake8",
]

[tool.black]
line-length = 100
target-version = ["py36", "py37"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | docs
)/
'''
