[build-system]
requires = [
    "setuptools >= 40.8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "pulp-rpm"
version = "3.31.0"
description = "Pulp plugin to manage RPM repositories"
readme = "README.rst"
authors = [
  {name="Pulp Rpm Plugin Project Developers", email="pulp-dev@redhat.com"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "createrepo_c~=1.2.1",
    "django_readonly_field~=1.1.1",
    "jsonschema>=4.6,<5.0",
    "libcomps>=0.1.20.post1,<0.2",
    "productmd~=1.33.0",
    "pulpcore>=3.81.0,<3.85",
    "solv~=0.7.21",
    "aiohttp_xmlrpc~=1.5.0",
    "importlib-resources~=6.4.0",
]

[project.urls]
Homepage = "https://pulpproject.org"
Documentation = "https://pulpproject.org/pulp_rpm/"
Repository = "https://github.com/pulp/pulp_rpm"
"Bug Tracker" = "https://github.com/pulp/pulp_rpm/issues"
Changelog = "https://pulpproject.org/pulp_rpm/changes/"

[project.entry-points."pulpcore.plugin"]
pulp_rpm = "pulp_rpm:default_app_config"

[project.entry-points."pytest11"]
pulp_rpm = "pulp_rpm.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]

[tool.towncrier]
package = "pulp_rpm"
filename = "CHANGES.md"
directory = "CHANGES/"
title_format = "## {version} ({project_date}) {{: #{version} }}"
template = "CHANGES/.TEMPLATE.md"
issue_format = "[#{issue}](https://github.com/pulp/pulp_rpm/issues/{issue})"
start_string = "[//]: # (towncrier release notes start)\n"
underlines = ["", "", ""]

[tool.check-manifest]
ignore = [
    ".bumpversion.cfg",
    "CHANGES/**",
    "CONTRIBUTING.rst",
    "dev_requirements.txt",
    "doc_requirements.txt",
    "docs/**",
    "staging_docs/**",
    "template_config.yml",
    ".pep8speaks.yml",
    ".ci/**",
    ".github/**",
    "lint_requirements.txt",
    ".flake8",
]

[tool.black]
line-length = 100
target-version = ["py36", "py37"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | docs
)/
'''

[tool.bumpversion]
# This section is managed by the plugin template. Do not edit manually.

current_version = "3.31.0"
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<alpha>0a)?(?P<patch>\\d+)(\\.(?P<release>[a-z]+))?"
serialize = [
  "{major}.{minor}.{patch}.{release}",
  "{major}.{minor}.{patch}",
  "{major}.{minor}.{alpha}{patch}.{release}",
  "{major}.{minor}.{alpha}{patch}",
]

[tool.bumpversion.parts.alpha]
# This section is managed by the plugin template. Do not edit manually.

# This is sort of a hack. In PEP440 prerelease markers work quite differently.
# But this fits best with the way we have been doing release versions.
optional_value = "final"
values = [
  "0a",
  "final",
]
independent = true

[tool.bumpversion.parts.release]
# This section is managed by the plugin template. Do not edit manually.

optional_value = "prod"
values = [
  "dev",
  "prod",
]

[[tool.bumpversion.files]]
# This section is managed by the plugin template. Do not edit manually.

filename = "./pulp_rpm/app/__init__.py"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
# This section is managed by the plugin template. Do not edit manually.

filename = "./pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
